--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
 }
 
 body {
-	font-family: Baloo;
+	font-family: 'Roboto', sans-serif;
 }
 
 header {
