Add word and hyperlinks.

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 header {
 	width: 100%;
 	position: absolute;
+	z-index: 100;
 }
 
 header ul {
@@ -24,7 +25,12 @@ header ul li {
 	padding: 40px 15px;
 	text-transform: uppercase;
 	color: #fff;
-	font-size: 20px;
+	font-size: 14px;
+}
+
+header ul li a {
+	text-decoration: none;
+	color: #fff;
 }
 
 .hello-github {
@@ -37,6 +43,12 @@ header ul li {
 	color: #fff;
 	font-size: 50px;
 	margin-top: 20%;
+}
+
+.hello-github h3 {
+	text-align: center;
+	color: #fff;
+	font-size: 25px;
 }
 
 .animation-area {
